<resources>
    <string name="app_name">Family Map</string>
    <string name="something_goes_here">Something goes here</string>
    <string name="server_host">Server Host:</string>
    <string name="server_port">Server Port:</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="family_map">Family Map</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="show_life_story_lines">Show life story lines</string>
    <string name="show_family_tree_lines">Show family tree lines</string>
    <string name="show_spouse_lines">Show spouse lines</string>
    <string name="show_paternal_side">Show paternal side</string>
    <string name="show_maternal_side">Show maternal side</string>
    <string name="show_males">Show males</string>
    <string name="show_females">Show females</string>
    <string name="search">Search</string>
    <string name="api_key">AIzaSyAb0gmKoAqzbAo7EuSV2hjKHnxaTjMJgq8</string>
    <string name="people_title">Family</string>
    <string name="events_title">Life Events</string>
    <string name="error">ERROR!</string>
    <string name="error_relationship_not_found">ERROR! Cannot find relationship</string>
</resources>