<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PersonActivity">

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/first_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:id="@+id/selected_person_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            tools:text="fname"
             />
    </TableRow>

    <View
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/last_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:id="@+id/selected_person_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            tools:text="lname"/>
    </TableRow>

    <View
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/gender"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:id="@+id/selected_person_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            tools:text="gender"/>
    </TableRow>

    <View
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <ExpandableListView
        android:paddingTop="5dp"
        android:id="@+id/expandable_list_view_person"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
        android:dividerHeight="1dp"
        android:divider="@android:color/darker_gray"
        android:childDivider="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:context=".view.PersonActivity" />

</TableLayout>